--- a/package.json
+++ b/package.json
@@ -27,18 +27,20 @@
     "tar": ">=4.4.2"
   },
   "dependencies": {
+    "@markarian/wargame-vue-lib": "0.0.9",
     "bootstrap": "^3.4.1",
+    "extend": ">=3.0.2",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
     "url-parse": "^1.4.3",
     "vue": "^2.5.22",
+    "vue-moveable": "^1.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
-    "vue-moveable": "^1.1.0",
     "vue-template-compiler": "^2.5.22",
     "vuex": "^3.1.2",
-    "extend": ">=3.0.2",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack-dev-server": ">=3.1.11",
+    "vue-componentz": "0.0.1"
   }
 }
